-dynamysation du layout du bundle

--- a/Resources/views/Full/page_express.html.twig
+++ b/Resources/views/Full/page_express.html.twig
@@ -1,4 +1,4 @@
-{% extends "CGFrontBundle:Layout:home.html.twig" %}
+{% extends pageLayout %}
 {% set body_class = "bodyPage bodyForm bodySMExpress" %}
 {% set body_id = "sm-express" %}
 
